src/components/Link/Link.module.css
.default:focus-visible {
  outline: 3px solid var(--bg-400);
  outline-offset: 2px;
  border-radius: 10px;
}

.text {
  padding: 7px 5px;
  color: var(--text-900);

  &:visited {
    color: var(--text-900);
  }

  &:hover {
    font-weight: var(--font-weight-bold);
  }

  &:active {
    color: var(--bg-400);
  }
}

.primaryButton {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  padding: 10px 40px;
  min-width: 125px;
  max-height: 30px;
  border-radius: 10px;

  &:link {
    color: var(--bg-100);
    background-color: var(--bg-400);
  }

  &:visited {
    color: var(--bg-100);
  }

  &:hover {
    color: var(--bg-100);
    background-color: var(--tertiary);
  }

  &:active {
    background-color: var(--bg-400);
    text-decoration: underline;
    font-weight: var(--font-weight-bold);
  }

  &:not([href]) {
    color: rgba(22, 11, 70, 0.6);
    background-color: rgba(22, 11, 70, 0.1);
    text-decoration: revert;
    font-weight: revert;
  }
}

.secondaryButton {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  padding: 10px 30px;
  min-width: 163px;
  max-height: 30px;
  border-radius: 10px;

  color: var(--bg-400);
  background-color: #fff;
  border: 1px solid var(--bg-400);

  &:visited {
    color: var(--bg-400);
  }

  &:hover {
    color: var(--bg-100);
    background-color: var(--bg-400);
  }

  &:active {
    color: var(--bg-400);
    background-color: #fff;
    text-decoration: underline;
    font-weight: var(--font-weight-bold);
  }
}

